add col name config

--- a/config.ini
+++ b/config.ini
@@ -1,2 +1,12 @@
 [MISC]
+# Titulo del dialogo que aparece cuando se va a adjuntar una archivo ('Abrir' en windows español y 'Open' # en windows configurado en el idioma ingles.
 DIALOGFILE_TITLE = Open
+
+# Nombre de la columna referente al nombre
+NAME_COL = nombre
+
+# Nombre de la columna referente al apellido
+LASTNAME_COL = apellido
+
+# Nombre de la columna referente al numero de teléfono
+PHONE_COL = telefono
